--- a/comments/frontend/view/default/stylesheet/sass/partial/_comment.scss
+++ b/comments/frontend/view/default/stylesheet/sass/partial/_comment.scss
@@ -663,10 +663,6 @@
         margin: 0;
     }
 
-    .cmtx_posted_by {
-        margin-right: 4px;
-    }
-
     .cmtx_date_area {
         float: none;
         font-size: inherit;
